2004-10-22 21:32  dave

	* lib/Array/Compare.pm (1.10): Improved docs for full comparison
	* t/pod.t (1.2): Updated pod tests

2004-05-13 21:01  dave

	* README.xml (1.3): Small formatting changes

2004-05-12 23:52  dave

	* Makefile.PL (1.1): Added Makefile.PL
	* MANIFEST (1.1), t/pod.t (1.1), t/test.t (1.1): Added various
	  files to cvs

2003-09-19 10:37  dave

	* lib/Array/Compare.pm (1.9): Bring CVS version into line with old
	  file
	* Build.PL (1.1), Compare.pm (1.8), README.xml (1.2), test.pl
	  (1.2), lib/Array/Compare.pm (1.1): Bit of an overhaul

2002-03-29 17:45  dave

	* Compare.pm (1.7): Test version
	* README.xml (1.1): README input file
	* test.pl (1.1): Test script.

2002-01-09 11:41  dave

	* Compare.pm (1.6): Small cleanups

2001-12-09 19:31  dave

	* Compare.pm (1.5): Cleanup.
