@@ -1,7 +1,7 @@
 Build.PL
+Makefile.PL
 Changes
 lib/Array/Compare.pm
-Makefile.PL
 MANIFEST
 META.yml
 README
