@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name: Array-Compare
-version: 1.10
+version: 1.11
 author:
   - Dave Cross <dave@mag-sol.com>
 abstract: Perl extension for comparing arrays.
@@ -10,5 +10,5 @@ requires:
 provides:
   Array::Compare:
     file: lib/Array/Compare.pm
-    version: 1.10
+    version: 1.11
 generated_by: Module::Build version 0.25
