@@ -1,3 +1,8 @@
+2004-10-23 09:11  dave
+
+	* lib/Array/Compare.pm (1.11), t/test.t (1.2): Improved test
+	  coverage
+
 2004-10-22 21:32  dave
 
 	* lib/Array/Compare.pm (1.10): Improved docs for full comparison
